--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,7 @@
 
   <hr>
   <button id="saveBtn">💾 Save</button>
+  <button id="deleteBtn" class="danger">🗑️ Delete</button>
   <button id="exportBtn">⬇️ Export</button>
   <label for="importFile" class="button">⬆️ Import</label> <!-- Styled label for hidden file input -->
   <input id="importFile" type="file" accept=".lngz" class="hidden-file-input">
@@ -48,6 +49,7 @@
   </footer>
   
   <script src="lib/jszip.min.js"></script>
+  <script src="validator.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
