accesibility added -> shadow dom next

--- a/meta/about.html
+++ b/meta/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../icons/icon16.png">
   <title>About Languagizer</title>
   <link rel="stylesheet" href="meta.css">
@@ -22,5 +23,9 @@
     <li>A simple decoder to translate secret messages back to plain text.</li>
   </ul>
   <p>This project is open-source and distributed under the MIT License.</p>
+  <h2>Contact & Contributions</h2>
+  <p>
+    Have feedback, a feature request, or want to contribute? We'd love to hear from you! Feel free to open an issue or a pull request on the <a href="https://github.com/PatatjeOG/Languagizer" target="_blank" rel="noopener noreferrer">GitHub repository</a>.
+  </p>
 </body>
 </html>
