--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <h1><img src="../icons/icon32.png" alt="Languagizer Logo"> Languagizer</h1>
-
-  <label for="vaultSelect">Active Language</label>
+  <div id="activeLangDisplay"></div>
+  <label for="vaultSelect">Choose Language:</label>
   <select id="vaultSelect"><option value="">-- Select --</option></select>
 
   <label>Name</label>
